--- a/index.html
+++ b/index.html
@@ -1,2 +1,29 @@
-# k4et.github.io
-Guide NBA
+<!DOCTYPE html>
+<!--
+To change this license header, choose License Headers in Project Properties.
+To change this template file, choose Tools | Templates
+and open the template in the editor.
+-->
+<html>
+    <head>
+        <title>NBA/accueil</title>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <link rel='stylesheet' href="css/css index.css" type='text/css' />
+    </head>
+    <body>
+        <div>
+           <ul>
+             <li> <img src="img/nba.png" alt="logo NBA" style="width:80px;"></li>
+             <li><a class="active" href="index.asp">Accueil</a></li>
+             <li><a href="equipes.html">Equipes</a></li>
+             <li><a href="evenements.html">Evenement</a></li>
+             <li><a href="ensavoirplus.html">En savoir plus</a></li>
+            </ul>
+           
+           <br>
+           <br>
+            <h1>BIENVENUE SUR MON GUIDE DE LA SAISON 2022/2023 DE NBA</h1>
+        </div>
+    </body>
+</html>
