--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@ and open the template in the editor.
         <div>
            <ul>
              <li> <img src="img/nba.png" alt="logo NBA" style="width:80px;"></li>
-             <li><a class="active" href="index.asp">Accueil</a></li>
+             <li><a class="active" href="index.html">Accueil</a></li>
              <li><a href="equipes.html">Equipes</a></li>
              <li><a href="evenements.html">Evenement</a></li>
              <li><a href="ensavoirplus.html">En savoir plus</a></li>
