--- a/equipes.html
+++ b/equipes.html
@@ -18,7 +18,7 @@ and open the template in the editor.
           <li><a href="index.html">Accueil</a></li>
           <li><a class="active" href="equipes.html">Equipes</a></li>
           <li><a href="evenements.html">Evenement</a></li>
-          <li><a href="about.asp">En savoir plus</a></li>
+          <li><a href="ensavoirplus.html">En savoir plus</a></li>
   
          </ul>
          <h1>DANS CETTE RUBRIQUE VOUS POURREZ RETROUVER TOUTES LES INFORMATIONS A SAVOIR SUR LES EQUIPES NBA DE LA SAISON 2022-23</h1>
