--- a/ensavoirplus.html
+++ b/ensavoirplus.html
@@ -26,6 +26,7 @@ and open the template in the editor.
             <h1>RUBRIQUE EN SAVOIR PLUS</h1>
             <h2> Si vous chercher plus d'information a propos de la ligue americaine cliquez juste <a href="https://fr.wikipedia.org/wiki/National_Basketball_Association"> ici</a></h2>
             <h2> Vous pouvez suivre les resultats en temps réel juste<a href="https://www.flashscore.fr/basket/usa/nba/#/CpvDJmdj/table/overall"> ici</a> </h2>
+            <h2> Vous pouvez me contacter juste ici <a href="mailto:clementreillon2006@gmail.com">Contactez-moi !</a> </h2>
             
         </div>
     </body>
